Removing use of preview features (pattern matching).
Signed-off-by: Laird Nelson <ljnelson@gmail.com>